<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/enter_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorBorder"
        android:hint="@string/enter_word"/>
    <EditText
        android:id="@+id/enter_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="18dp"
        android:background="@color/colorBorder"
        android:hint="@string/enter_meaning"/>
    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/add_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dictionary_word"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"/>
</LinearLayout>
